@startuml

hide attributes
hide methods
hide members

'Interfacce utente
interface MainWindow{
}

interface FinestraDiario{
}

interface FinestraPagina{
}

'Classi base
class Applicazione{
}

class GestoreDiario{
}

class GestorePagina{
}

'Strutture dati
class ListaDiari{
}

class InfoDiario{
}

class Diario extends InfoDiario{
}

class InfoPagina{
}

class Pagina extends InfoPagina{
}

'Traduttori e salvataggio dati
class Traduci{
}

class Salva{
}

'Interazioni tra interfacce
MainWindow --> FinestraDiario
FinestraDiario --> FinestraPagina

'Interazioni con interfacce
MainWindow --> Applicazione
FinestraDiario --> GestoreDiario
FinestraPagina --> GestorePagina

'Relazioni finestre-gestori
Applicazione "1" *-- "1" ListaDiari
GestoreDiario "1" *-- "1" Diario
GestorePagina "1" *-- "1" Pagina

'Relazioni gestori-salvataggio
Applicazione --> Salva
GestoreDiario --> Salva
GestorePagina --> Salva

'Relazione salvataggio-traduzione
Salva --> Traduci

'Relazioni strutture dati
ListaDiari "1" *-- "0..*" InfoDiario
Diario "1" *-- "0..*" InfoPagina

@enduml
